--- a/ForEvents/app/build.gradle
+++ b/ForEvents/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'  //api-implementation
+    implementation 'com.stepstone.apprating:app-rating:2.3.1'
 
 
 }
