--- a/ForEvents/app/src/main/AndroidManifest.xml
+++ b/ForEvents/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OptionsActivity"></activity>
+        <activity android:name=".MemoryEventsActivity"></activity>
+        <activity android:name=".OptionsActivity" />
         <activity android:name=".FollowersActivity" />
         <activity android:name=".EditProfileActivity" />
         <activity android:name=".PostDetailActivity" />
@@ -32,6 +33,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.victor.forevents.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/paths" />
+        </provider>
     </application>
 
 </manifest>
